--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section id="overlay">
-        <h2 class="mimo">Chicago Burgers</h2>
+        <h2 class="mimo">Lzeez Burgers</h2>
         <svg version="1.1" id="Layer_1"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
